tests/expected_failures/as_variant_with_named_fields_mut.stderr
error[E0599]: no method named `as_named_mut` found for enum `MyEnum` in the current scope
  --> tests/expected_failures/as_variant_with_named_fields_mut.rs:15:15
   |
 4 | enum MyEnum {
   | ----------- method `as_named_mut` not found for this enum
...
15 |     let _ = x.as_named_mut();
   |               ^^^^^^^^^^^^
   |
help: there is a method `as_a_mut` with a similar name
   |
15 -     let _ = x.as_named_mut();
15 +     let _ = x.as_a_mut();
   |
